--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,7 @@
         android:ems="10"
         android:fontFamily="serif"
         android:hint="provide dose (mg)"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:maxLength="5"
         android:textAlignment="center"
         android:textColor="#212F73"
